2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* do.test: Skip test 1.14 if tcl < 8.3.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* control.man:
	* control.tcl:
	* pkgIndex.tcl:  Set version of the package to to 0.1.2.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* control.man: More semantic markup, less visual one.

2002-03-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* control.man: Fixed formatting errors in the doctools manpage.

2002-02-21  Don Porter <dgp@users.sourceforge.net>

	* control.tcl:
	* pkgIndex.tcl: Bumped to 0.1.1.
	* rswitch.tcl:
	* rswitch.test: removed files from HEAD branch that aren't yet
	ready for release.
	* tclIndex: ran genIndex

2002-02-21  Reinhard Max  <max@suse.de>

	* do.test: Updated do-2.3 to reflect the change of the standard
	"wrong # args:..." message for Tcl 8.4. (Bug #517595)
	
2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* assert.tcl: 
	* do.tcl: Frink run

2002-01-29  Reinhard Max  <max@suse.de>

	* do.test: Changed the performance comparison part at the end to
	  be skipped during "make test".
	
	* RELEASE 0.1: bundled with tcllib 1.2

2002-01-18  Don Porter <dgp@users.sourceforge.net>

	* Bumped back to 0.1, which has never been released yet.

2002-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 0.2

2002-01-18  Reinhard Max  <max@suse.de>
