@@ -4,13 +4,13 @@
 #	"control".  It provides commands that govern the flow of
 #	control of a program.
 #
-# RCS: @(#) $Id: control.tcl,v 1.9.6.1 2005/05/24 14:21:00 dgp Exp $
+# RCS: @(#) $Id: control.tcl,v 1.9.6.2 2005/05/24 15:08:51 dgp Exp $
 
 package require Tcl 8.2
 
 namespace eval ::control {
-    variable version 0.1.2
-    namespace export assert control do no-op rswitch
+    variable version 0.2
+    namespace export assert control do no-op waitForAny
 
     proc control {command args} {
 	# Need to add error handling here
