@@ -16,3 +16,4 @@ set auto_index(::control::AssertSwitch) [list source [file join $dir assert.tcl]
 set auto_index(::control::assert) [list source [file join $dir assert.tcl]]
 set auto_index(::control::do) [list source [file join $dir do.tcl]]
 set auto_index(::control::no-op) [list source [file join $dir no-op.tcl]]
+set auto_index(::control::waitForAny) [list source [file join $dir wait-for-any.tcl]]
